# sparkT

./: .gitattributes  README.md  build.sbt
.circleci/: config.yml
beam-postgres/: stack.yaml
beam/beam-core/: beam-core.cabal
beam/beam-core/Database/Beam/: Query.hs  Schema.hs
beam/beam-core/Database/Beam/Backend/SQL/: AST.hs  Builder.hs  SQL92.hs
beam/beam-core/Database/Beam/Query/: Combinators.hs  Internal.hs  Ord.hs  SQL92.hs  Types.hs
beam/beam-core/Database/Beam/Schema/: Tables.hs
beam/beam-core/test/Database/Beam/Test/: SQL.hs  Schema.hs
sparkt-ast-hs/: sparkt-ast.cabal  stack.yaml
sparkt-ast-hs/src/Database/SparkT/AST/: Context.hs  Database.hs  ETL.hs  Error.hs  Internal.hs  Protocol.hs  SQL.hs
sparkt-ast-hs/src/Database/SparkT/Builder/: SQL.hs  Scala.hs
sparkt-ast-hs/src/Database/SparkT/Executor/: Aggregation.hs  Context.hs  Expression.hs  SQL.hs
sparkt-ast-hs/src/Database/SparkT/Parser/: Internal.hs  SQL.hs  Test.hs
sparkt-ast-hs/test/: Main.hs
sparkt-ast-hs/test/Database/SparkT/Test/AST/: ETL.hs
sparkt-ast-hs/test/Database/SparkT/Test/Executor/: Select.hs
sparkt-ast-hs/test/Database/SparkT/Test/Parser/: Expression.hs  Select.hs
sparkt-ast-scala/: build.sbt
sparkt-ast-scala/src/main/scala/sparkt/ast/: database.scala  etl.scala  protocol.scala  sql.scala
sparkt-be-spark/: build.sbt
sparkt-be-spark/project/: plugins.sbt
sparkt-be-spark/src/main/resources/: application.conf
sparkt-be-spark/src/main/scala/sparkt/backend/: compiler.scala  etl.scala  mapper.scala  schema.scala  server.scala  service.scala  spark.scala
sparkt-fe-beam/: sparkt-fe-beam.cabal  stack.yaml
sparkt-fe-beam-example/: .ghci  sparkt-fe-beam-example.cabal  stack.yaml
sparkt-fe-beam-example/src/: Main.hs
sparkt-fe-beam-example/src/Example/: Databases.hs  ETLs.hs  Schemata.hs
sparkt-fe-beam/src/: Lib.hs
sparkt-fe-beam/src/Database/SparkT/: AST.hs  ASTBase.hs  ETL.hs  Internal.hs
sparkt-fe-client/: sparkt-fe-client.cabal  stack.yaml
sparkt-fe-client/src/Database/SparkT/: Client.hs
sparkt-fe-client/src/Database/SparkT/Client/: Inspect.hs  Websocket.hs
sparkt-fe-client/test/: Main.hs
