name:                sparkt-ast
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gip/sparkt
license:             MIT
author:              Gilles Pirio
maintainer:          g36130@gmail.com
copyright:           2017 Gilles Pirio
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.SparkT.AST.SQL,
                       Database.SparkT.AST.Database,
                       Database.SparkT.AST.Protocol,
                       Database.SparkT.AST.ETL,
                       Database.SparkT.AST.Error,
                       Database.SparkT.AST.Context,
                       Database.SparkT.Parser.SQL,
                       Database.SparkT.Executor.Context,
                       Database.SparkT.Executor.SQL,
                       Database.SparkT.Executor.Expression,
                       Database.SparkT.Executor.Aggregation,
                       Database.SparkT.Builder.Scala,
                       Database.SparkT.Builder.SQL
  build-depends:       HUnit,
                       base,
                       containers,
                       parsec >=3.1 && <3.2,
                       text,
                       mtl,
                       string-conv,
                       set-monad
  other-modules:       Database.SparkT.Parser.Internal
  other-extensions:    OverloadedStrings, TypeFamilies, GADTs
  default-language:    Haskell2010

test-suite sparkt-ast-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Database.SparkT.Test.Parser.Select,
                 Database.SparkT.Test.Parser.Expression,
                 Database.SparkT.Test.Executor.Select,
                 Database.SparkT.Test.AST.ETL
  build-depends: base,
                 containers,
                 mtl,
                 sparkt-ast,
                 text,
                 bytestring,
                 time,
                 tasty,
                 tasty-hunit,
                 parsec >=3.1 && <3.2
  default-language: Haskell2010
  default-extensions: OverloadedStrings, FlexibleInstances, FlexibleContexts, GADTs, TypeFamilies,
                      DeriveGeneric, DefaultSignatures, RankNTypes, StandaloneDeriving, KindSignatures,
                      TypeApplications, ScopedTypeVariables, MultiParamTypeClasses
