name:                sparkt-fe-beam-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gip/sparkt
license:             MIT
-- license-file:        LICENSE
author:              Gilles Pirio
maintainer:          g36130@gmail.com
copyright:           2017 Gilles Pirio
category:            Database
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

executable sparkt-fe-beam-example
  hs-source-dirs:      src
  other-modules:       Example.Databases,
                       Example.ETLs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       text,
                       string-conv,
                       beam-core,
                       sparkt-ast,
                       sparkt-fe-client,
                       sparkt-fe-beam
  default-language:    Haskell2010

test-suite sparkt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparkt-fe-beam
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gip/sparkt
