name:                sparkt-fe-beam-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gip/sparkt
license:             MIT
-- license-file:        LICENSE
author:              Gilles Pirio
maintainer:          g36130@gmail.com
copyright:           2017 Gilles Pirio
category:            Database
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

executable sparkt-fe-beam-example
  hs-source-dirs:      src
  other-modules:       Example.Schemata,
                       Example.ETLs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       mtl,
                       text,
                       string-conv,
                       beam-core,
                       sparkt-ast,
                       sparkt-fe-client,
                       sparkt-fe-beam
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gip/sparkt
