name:                sparkt-fe-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gip/sparkt
license:             MIT
author:              Gilles Pirio
maintainer:          g36130@gmail.com
copyright:           2017 Gilles Pirio
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.SparkT.Client.Websocket,
                       Database.SparkT.Client.Inspect
  build-depends:       HUnit,
                       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2,
                       text,
                       string-conv,
                       sparkt-ast,
                       websockets
  other-modules:
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010

test-suite sparkt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , sparkt-ast
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
